<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Folio Free</string>
    <string name="app_name_pro">Folio</string>
    <string name="app_name_toolbar">Folio</string>
    <string name="app_name_toolbar_pro">Folio Pro</string>
    <string name="app_name_about">Folio for Facebook</string>
    <string name="app_name_about_pro">Folio for Facebook Pro</string>
    <string name="action_settings">Settings</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Open Left Drawer</string>
    <string name="facebook_app_id">749196541804006</string>
    <string name="get_started">Log In With Facebook</string>
    <string name="status_updated">Status updated.</string>
    <string name="loading_video">Loading.</string>
    <string name="ok">OK</string>
    <string name="tap_to_set">Tap To Apply Changes</string>
    <string name="send_feedback">Folio Feedback</string>
    <string name="applying_changes">Clearing cache. Relaunch Folio.</string>
    <string name="cancel">Cancel</string>
    <string name="choose_email_client">Choose e-mail client</string>
    <string name="no_network">You\'re not online.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="preference_about_category">About</string>
    <string name="preference_set_category">All Set?</string>
    <string name="share_action">Share current page</string>
    <string name="share_action_subject">Facebook page</string>
    <string name="not_valid_title">Not Valid</string>
    <string name="not_valid_message">This version of Folio is not from the Play Store and will not function.</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="crash_toast_text">Something is wrong.</string>
    <string name="crash_dialog_title">Folio Pro has crashed</string>
    <string name="crash_dialog_text">Unfortunately Folio Pro has stopped. Please tap OK to send this report via email.</string>
    <string name="crash_dialog_comment_prompt">You can leave comments about this crash here:</string>
    <string name="permission_read_external_storage">Permission to read files is required</string>
    <string name="permission_write_external_storage">Permission to write files is required</string>
    <string name="permission_access_location">Permission to access your location is required</string>
    <string name="permission_get_accounts">Permission to get accounts is required by notification service</string>
    <string name="fragment_main_downloading">Downloading&#8230;</string>
    <string name="like_on_facebook">Downloading&#8230;</string>
    <string name="like_on">Like on Facebook</string>
    <string name="join_on">Join Google+ Community</string>
    <string name="follow_on">Follow On Twitter</string>
    <string name="new_share">Enable New Sharer</string>
    <string name="new_share_hint">This enables the desktop sharer which allows sharing links to friends, pages and groups.</string>
    <string name="share_success">Item shared. Loading News Feed&#8230;</string>
    <string name="terms_settings">Terms</string>
    <string name="settings_more">More</string>
    <string name="folio_video">Upload video</string>
    <string name="folio_checkins">Check-in</string>
    <string name="folio_tags">Tag a friend</string>
    <string name="folio_images">Upload image from gallery</string>
    <string name="update_share">Share Now</string>
    <string name="update_status">Post Status</string>
    <string name="update_photo">Add Photos</string>
    <string name="show_fab">Display a FAB</string>
    <string name="show_fab_hint">Display a floating action button at bottom right of screen.</string>
    <string name="quickaccess">Quick Access</string>
    <string name="newsfeed">News Feed</string>
    <string name="topnews">Notes</string>
    <string name="fbmenu">Facebook Menu</string>
    <string name="trending">Trending</string>
    <string name="messages">Messages</string>
    <string name="faved">Favorites</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="pages">Pages</string>
    <string name="photos">Photos</string>
    <string name="reminders">Reminders</string>
    <string name="events">Events</string>
    <string name="onthisday">On This Day</string>
    <string name="saved">Saved</string>
    <string name="prefs">Preferences</string>
    <string name="settings">Settings</string>
    <string name="helpfeed">Feedback</string>
    <string name="bugs">Report A Bug</string>
    <string name="switch_to_folio">Switch to Folio</string>
    <string name="switch_to_twitter">Switch to Twitter</string>
    <string name="switch_to_gplus">Switch to Google+</string>
    <string name="switch_to_gram">Switch to Instagram</string>
    <string name="switch_to_tum">Switch to Tumblr</string>
    <string name="discover">Discover</string>
    <string name="connect">Connect</string>
    <string name="twitter_search">Search</string>
    <string name="twitter_home">Home</string>
    <string name="twitter_me">Me</string>
    <string name="addons">Social Add-ons</string>
    <string name="enable_twitter">Show Twitter</string>
    <string name="enable_google">Show Google+</string>
    <string name="enable_instagram">Show Instagram</string>
    <string name="enable_tumblr">Show Tumblr</string>
    <string name="navigation_pref">Navigation Drawer Items</string>
    <string name="navigation_pref_hint">Customize the navigation drawer by removing items you don\'t use.</string>
    <string name="recent_nav">Show News Feed</string>
    <string name="top_nav">Show Notes</string>
    <string name="trending_nav">Show Trending</string>
    <string name="friends_nav">Show Friends</string>
    <string name="groups_nav">Show Groups</string>
    <string name="pages_nav">Show Pages</string>
    <string name="photos_nav">Show Photos</string>
    <string name="events_nav">Show Events</string>
    <string name="onday_nav">Show On This Day</string>
    <string name="saved_nav">Show Saved</string>
    <string name="news_feed_preferences">News Feed Preference</string>
    <string name="feed_choice">Sort News Feed By</string>
    <string name="feed_choice_hint">Current sort: %s.</string>
    <string-array name="pref_default_feed">
        <item>Default (Fast to load)</item>
        <item>Most Recent (Slow to load)</item>
        <item>Top News (Slow to load)</item>
    </string-array>
    <string name="choose_font_facebook">Facebook Font Size</string>
    <string name="choose_font_facebook_hint">Current font size: %s</string>
    <string name="font_preference">Facebook Font Preference</string>
    <string-array name="font_choice">
        <item>Default Font</item>
        <item>Small Font</item>
        <item>Medium Font</item>
        <item>Large Font</item>
        <item>XLarge Font</item>
        <item>XXLarge Font</item>
    </string-array>
    <string name="top">Jump To Top</string>
    <string name="fb_settings">Facebook Settings</string>
    <string name="fb_chat">Active Friends</string>
    <string name="fb_recent">Most Recent</string>
    <string name="refresh">Refresh</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_about_hint">Setup notifications.</string>
    <string name="search">Search Facebook</string>
    <string name="end">Log out</string>
    <string name="exit">Close</string>
    <string name="customize_folio">Customize Folio</string>
    <string name="customize_folio_hint">Change look and layout.</string>
    <string name="preferences_auto">Disable Facebook Bar</string>
    <string name="preferences_auto_hint">This turns on the Folio Toolbar.</string>
    <string name="hidden_bar">Disable Folio Toolbar</string>
    <string name="hidden_bar_hint">Only use the Facebook Bar. Please turn off the Folio Toolbar first.</string>
    <string name="choose_theme_folio">Choose App Theme</string>
    <string name="choose_theme_facebook">Choose Facebook Theme</string>
    <string name="choose_theme_facebook_hint">Current theme: %s</string>
    <string name="choose_theme_folio_hint">Current theme: %s</string>
    <string name="preference_category7">Customizations</string>
    <string name="preference_category4">Folio Themes</string>
    <string name="preference_category15">Folio Layout Settings</string>
    <string name="preference_facebook_layouts">Facebook Layout Settings</string>
    <string name="preference_category3">Facebook Themes</string>
    <string name="hide_web">Hide WebView Loading</string>
    <string name="hide_web_hint">Prevents default Facebook theme while page is loading. (Not recommended for Jelly Bean devices)</string>
    <string-array name="pref_theme_entries">
        <item>Folio Theme</item>
        <item>Pink Theme</item>
        <item>Dark Theme</item>
        <item>Blue Grey Theme</item>
    </string-array>
    <string-array name="pref_theme_fb_entries">
        <item>Facebook Theme</item>
        <item>Black Theme</item>
        <item>Dracula Theme</item>
        <item>Folio Theme</item>
        <item>Folio Classic</item>
    </string-array>
    <string name="fb_offline">Error</string>
    <string name="cancelled">Canceled</string>
    <string name="people_you">People You May Know</string>
    <string name="people_you_hint">Hide people you may know.</string>
    <string name="no_images">Disable Images</string>
    <string name="no_images_hint">Reduce data usage by removing images.</string>
    <string name="credits_licenses">Tap here to read more about the licences used in Folio.</string>
    <string name="credits_licenses_description">Open source software licenses</string>
    <string name="preference_category6">Credits</string>
    <string name="credits_bejan">Patryk Goworowski</string>
    <string name="credits_bejan_description">For launcher icons for Folio Free &amp; Folio Pro. Tap here to purchase Cornie Icons.</string>
    <string name="credits_nam">Nam Nghiem</string>
    <string name="credits_nam_description">For help with cover photos.</string>
    <string name="credits_fadev">Florent Anders</string>
    <string name="credits_fadev_description">For help with Folio Lock.</string>
    <string name="credits_janae">Janae</string>
    <string name="credits_janae_description">For sharing an interest in technology and being patient while daddy worked.</string>
    <string name="credits_tykeshia">Tykeshia</string>
    <string name="credits_tykeshia_description">For being supportive and encouraging throughout the past years. Thanks for letting me borrow the laptop.</string>
    <string name="preference_category8">Open Source Licenses</string>
    <string name="preference_category12">Translations</string>
    <string name="credits_swipe_description">Jeffrey Sera</string>
    <string name="credits_swipe">Special thanks to Jeff of Happening Studios, for help with Messenger.com code and for pushing me to make Folio better. Swipe is an awesome app pushing innovation of wrappers.</string>
    <string name="about_translate">Folio Translators</string>
    <string name="about_translate_hint">Tap here to see whose helped translate Folio.</string>
    <string name="lock_abort">Cancel</string>
    <string name="lock_pin">lock code</string>
    <string name="lock_text">Secure Folio with a lock code</string>
    <string name="lock_confirm">confirm lock code</string>
    <string name="context_save_image">Download Image</string>
    <string name="context_share_image">Share Image</string>
    <string name="context_copy_image_link">Copy link</string>
    <string name="copyright">\u00A9 2016 Creative Trends Apps LLC.</string>
    <string name="about_version">http://www.creativetrendsapps.com</string>
</resources>