<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Copyright (C) 2014-2015 Jorell Rutledge/Creative Trends.
    This file is originally apart of Folio for Facebook.
    Copyright notice must remain here if you're using any part of this code.-->



    <com.creativtrendz.folio.preferences.PreferenceCategory
        android:title="@string/preference_category6">

        <Preference
            android:title="@string/credits_swipe_description"
            android:summary="@string/credits_swipe"/>


        <Preference
            android:key="bejan"
            android:title="@string/credits_bejan"
            android:summary="@string/credits_bejan_description"/>

        <Preference
            android:key="nam"
            android:title="@string/credits_nam"
            android:summary="@string/credits_nam_description"/>

        <Preference
            android:key="fadev"
            android:title="@string/credits_fadev"
            android:summary="@string/credits_fadev_description"/>



        <Preference

            android:title="@string/credits_janae"
            android:summary="@string/credits_janae_description"
            android:selectable="false"/>

        <Preference
            android:title="@string/credits_tykeshia"
            android:summary="@string/credits_tykeshia_description"
            android:selectable="false"/>

    </com.creativtrendz.folio.preferences.PreferenceCategory>

    <com.creativtrendz.folio.preferences.PreferenceCategory
        android:title="@string/preference_category12">

        <Preference
            android:key="translators"
            android:summary="@string/about_translate_hint"
            android:title="@string/about_translate" />



    </com.creativtrendz.folio.preferences.PreferenceCategory>

    <com.creativtrendz.folio.preferences.PreferenceCategory
        android:title="@string/preference_category8">

        <Preference
            android:key="about"
            android:summary="@string/credits_licenses"
            android:title="@string/credits_licenses_description" />

    </com.creativtrendz.folio.preferences.PreferenceCategory>

</PreferenceScreen>
