<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >


 <com.creativtrendz.folio.preferences.PreferenceCategory
		android:title="@string/preference_category3">
        
    
   <com.creativtrendz.folio.preferences.ListPreferenceCompat
        	android:id="@+id/relativeLayoutChooseTheme"
            android:entries="@array/pref_theme_fb_entries"
            android:entryValues="@array/pref_theme_values_free"
            android:key="theme_preference_fb"
            android:summary="@string/choose_theme_folio_hint"
            android:title="@string/choose_theme_facebook"
            android:defaultValue="materialtheme" />
    
            
    </com.creativtrendz.folio.preferences.PreferenceCategory>
            
    <com.creativtrendz.folio.preferences.PreferenceCategory
		android:title="@string/preference_facebook_layouts">


                
        <com.creativtrendz.folio.preferences.SwitchPreferenceCompat
            android:key="no_images"
            android:title="@string/no_images"
            android:summary="@string/no_images_hint"
            android:defaultValue="false"/> 
            
                    
                    
        <com.creativtrendz.folio.preferences.SwitchPreferenceCompat
            android:key="hide_people"
            android:title="@string/people_you"
            android:summary="@string/people_you_hint"
            android:defaultValue="false"/> 
              
               
    </com.creativtrendz.folio.preferences.PreferenceCategory>
    
    
    <com.creativtrendz.folio.preferences.PreferenceCategory
        android:title="@string/preference_category4">
        
           
       
    <com.creativtrendz.folio.preferences.ListPreferenceCompat
        	android:id="@+id/relativeLayoutChooseTheme"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="theme_preference"
            android:summary="@string/choose_theme_folio_hint"
            android:title="@string/choose_theme_folio"
            android:defaultValue="folio" />
    
    </com.creativtrendz.folio.preferences.PreferenceCategory>
    
    <com.creativtrendz.folio.preferences.PreferenceCategory
        android:title="@string/preference_category15">
    
               
                
         <com.creativtrendz.folio.preferences.SwitchPreferenceCompat
            android:key="show_fab"
            android:title="@string/show_fab"
             android:defaultValue="true" />
                     
        </com.creativtrendz.folio.preferences.PreferenceCategory>
        

        
</PreferenceScreen>
