<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:paddingBottom="20dp"
        android:text="@string/lock_text"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/first_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/lock_pin"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/second_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/first_edittext"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/lock_confirm"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/buttonStandard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/second_edittext"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/PrimaryColor"
        android:onClick="onClickStandard"
        android:text="@string/lock_abort"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/second_edittext"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/PrimaryColor"
        android:onClick="onClickSmall"
        android:text="@string/ok"
        android:textColor="@android:color/white" />

</RelativeLayout>
