<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:id="@+id/relativeLayout1">
        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:background="?attr/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@+id/header"
            android:background="@drawable/actionbar_shadow" />

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/app_icon"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/copyright"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="@string/copyright"
            android:lines="3"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/app_description"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:textStyle="normal"
            android:text="@string/about_version"
            android:lines="3"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_alignBottom="@+id/header"
            android:layout_alignStart="@+id/copyright" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/about_1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@color/md_red_700"
                android:visibility="gone">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:maxWidth="30dp"
                    android:maxHeight="30dp"
                    android:src="@drawable/ic_google_about"
                    tools:ignore="ContentDescription"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_on"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/onFacebook"
                android:layout_below="@id/about_1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@color/colorPrimaryDark">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:maxWidth="30dp"
                    android:maxHeight="30dp"
                    android:src="@drawable/ic_facebook_about"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like_on"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_gravity="center" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/onGoogle"
                android:layout_below="@id/onFacebook"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@color/md_red_700">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:maxWidth="30dp"
                    android:maxHeight="30dp"
                    android:src="@drawable/ic_google_about"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_on"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_gravity="center" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/onTwitter"
                android:minHeight="48dp"
                android:layout_below="@id/onGoogle"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@color/md_light_blue_500">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:maxWidth="30dp"
                    android:maxHeight="30dp"
                    android:src="@drawable/ic_twitter_about"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_on"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_gravity="center"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/onDonate"
                android:layout_below="@id/onTwitter"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@color/md_green_500"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:maxWidth="30dp"
                    android:maxHeight="30dp"
                    android:src="@drawable/ic_donate"
                    android:tint="@color/white"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Donate via PayPal"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    tools:ignore="HardcodedText" />
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>